Minor: Ensure dropdown-clear-icon has some initial z-index

--- a/resources/css/app/primevue/forms.css
+++ b/resources/css/app/primevue/forms.css
@@ -10,11 +10,15 @@
   width:            inherit;
 }
 
-.p-dropdown.w-full {
-  overflow:         hidden;
-
-    .p-inputtext {
-      padding:          calc(.5rem - 1px) .5rem;
+.p-dropdown {
+    &.w-full {
+      overflow:         hidden;
+        .p-inputtext {
+          padding:          calc(.5rem - 1px) .5rem;
+        }
+    }
+    .p-dropdown-clear-icon {
+      z-index:          9;
     }
 }
 
